# AutoAnswer

./: .gitignore  PLAN.md  PROGRESS.md  README.md  pyproject.toml
adapter/: __init__.py  base.py  registry.py
adapter/baas/: __init__.py  adapter.py  profile.py  schemas.py
adapter/maa/: __init__.py
api/: __init__.py
cli/: __init__.py  main.py
models/: __init__.py  script.py
monitor/: __init__.py
orchestrator/: __init__.py  engine.py
storage/: __init__.py
