[project]
name = "autoanswer"
version = "0.1.0"
description = "Game script orchestration layer — launch, configure, monitor, and stop game automation scripts"
authors = []
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "pydantic >= 2.0",
    "pyyaml >= 6.0",
]

[project.scripts]
autoanswer = "cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
